--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </ul>
     </div>
   </nav>
-
+  <div style="overflow: hidden;"> 
   <div class="intro-about-container">
     <div class="intro-text" data-aos="fade-right">
       <h1>Hello! I'm <span class="green-glow">Abhinav</span></h1>
@@ -43,7 +43,7 @@
       <img src="https://t3.ftcdn.net/jpg/06/01/17/18/360_F_601171827_GwbDHEuhisbGFXRfIpXFhtf7wAvsbLut.jpg" alt="Avatar" class="avatar">
     </div>
   </div>
-   
+  </div>
   <section id="about" class="about-section">
     <h2 data-aos="fade-up">About Me</h2>
     <p data-aos="fade-up" data-aos-delay="100">Hey there! I'm Abhinav, a passionate and self-driven developer who loves to turn ideas into beautifully crafted web experiences. Currently pursuing my Bachelor of Computer Applications (BCA) from CSJMU, I'm constantly experimenting with HTML, CSS, JavaScript, and Bootstrap to bring creativity and interactivity to life. From clean UI designs to cool animations, I enjoy building things that are both functional and visually appealing. Whether it's glowing effects, responsive layouts, or theme toggles — I dive deep to understand how things work and how they can be improved. I believe in learning by doing, and every line of code I write brings me closer to my dream of becoming a top-notch creative coder and web developer. Let’s build something awesome together! 🚀</p>
@@ -137,4 +137,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
